[gd_scene load_steps=16 format=3 uid="uid://cjgg8s1xbkm67"]

[ext_resource type="Script" path="res://scripts/gameplayObjects/alchemyTable.gd" id="1_wr1u7"]
[ext_resource type="Resource" uid="uid://b5ikawlod3v5a" path="res://inventoryAssets/potions/redPotion.tres" id="2_bk653"]
[ext_resource type="Script" path="res://scripts/components/interactable.gd" id="2_lwojp"]
[ext_resource type="Resource" uid="uid://cnnujc7uicalb" path="res://inventoryAssets/potions/yellowPotion.tres" id="3_b6h32"]
[ext_resource type="PackedScene" uid="uid://djqghbv7n0e3o" path="res://prefabs/gameplayObjects/furnitureAndProps/alchemyTable.tscn" id="4_xgx07"]
[ext_resource type="PackedScene" path="res://prefabs/gameplayObjects/furnitureAndProps/potions/potionDamageRed.tscn" id="6_kohi7"]
[ext_resource type="PackedScene" path="res://prefabs/gameplayObjects/furnitureAndProps/mortarAndPestle.tscn" id="6_t15fu"]
[ext_resource type="PackedScene" path="res://prefabs/gameplayObjects/furnitureAndProps/potions/potionDamageYellow.tscn" id="7_2o3ac"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7r6gh"]
radius = 0.9

[sub_resource type="BoxShape3D" id="BoxShape3D_83j0p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_30pt3"]
size = Vector3(0.2, 0.4, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_0wbch"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tv85k"]
emission_enabled = true
emission = Color(0.956863, 0, 0, 1)
emission_energy_multiplier = 5.05

[sub_resource type="BoxShape3D" id="BoxShape3D_88r0e"]
size = Vector3(0.2, 0.4, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_617p7"]
emission_enabled = true
emission = Color(0.890196, 0.780392, 0, 1)
emission_energy_multiplier = 5.05

[node name="AlchemyTable" type="Area3D" node_paths=PackedStringArray("redPotionInteractible", "yellowPotionInteractible")]
script = ExtResource("1_wr1u7")
redPotionInteractible = NodePath("Red/RedInteractable")
yellowPotionInteractible = NodePath("Yellow/YellowInteractable")
redPotion = ExtResource("2_bk653")
yellowPotion = ExtResource("3_b6h32")

[node name="alchemyTable" parent="." instance=ExtResource("4_xgx07")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.262135, 0.856666, 0.0846425)
shape = SubResource("SphereShape3D_7r6gh")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.29, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_83j0p")

[node name="TableInteractable" type="Node" parent="StaticBody3D"]
script = ExtResource("2_lwojp")
interactionName = "Alchemy Table"
interactionDescription = "Stay close to brew potions"

[node name="Red" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.416131, 0.00734162, 0.27663)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Red"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.385, 0.825, 0)
shape = SubResource("BoxShape3D_30pt3")
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Red"]
transform = Transform3D(0.2, 0, 0, 0, 0.4, 0, 0, 0, 0.2, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_0wbch")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_tv85k")
metadata/_edit_lock_ = true

[node name="RedInteractable" type="Node" parent="Red"]
script = ExtResource("2_lwojp")
interactionName = "Red Potion"
interactionDescription = "Click to brew"

[node name="potionDamageRed" parent="Red" instance=ExtResource("6_kohi7")]

[node name="Yellow" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.617637, 0.0149623, -0.0169204)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Yellow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.315, 0.81, -0.155)
shape = SubResource("BoxShape3D_88r0e")
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Yellow"]
transform = Transform3D(0.2, 0, 0, 0, 0.4, 0, 0, 0, 0.2, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_0wbch")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_617p7")
metadata/_edit_lock_ = true

[node name="YellowInteractable" type="Node" parent="Yellow"]
script = ExtResource("2_lwojp")
interactionName = "Yellow Potion"
interactionDescription = "Click to brew"

[node name="potionDamageYellow" parent="Yellow" instance=ExtResource("7_2o3ac")]

[node name="mortarAndPestle" parent="." instance=ExtResource("6_t15fu")]
transform = Transform3D(1.06811, 0, 0, 0, 1.52001, 0, 0, 0, 1, 0.279404, 0.795851, 0.0910415)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
